# nomadsec

./: LICENSE.txt  README.md  TODO.md  csv2trav.py  kaa-names.json  namegen.py  nomadsec.py  pyproject.toml  randstar.lua  randzeta.lua  sarn-names.json  testdice.py  testrandom.lua  text2csv.py  zeta-names.json
grammars/: drak-grammar.json  kaa-grammar.json  kobol-grammar.json  sarn-grammar.json  zeta-grammar.json
names/: drak-names.txt  kaa-names.txt  kobol-names.txt  sarn-names.txt  zeta-names.txt
nomadsec/: __main__.py  common.py  namegen.py  output.py  sector.py  tables.py
nomadsec/grammars/: zetan.json
